Style(global): Fix scrollbars and link-button

--- a/src/styles/components/link.scss
+++ b/src/styles/components/link.scss
@@ -24,7 +24,6 @@
   padding: $spacing-s $spacing-m;
   font-size: $font-size-m;
   font-family: $sans-serif-font;
-  line-height: $font-size-m;
   text-align: center;
   text-transform: uppercase;
   color: $light-secondary-color;
